--- a/src/views/partials/footer.handlebars
+++ b/src/views/partials/footer.handlebars
@@ -3,7 +3,6 @@
     background-color: #8a56ac;
     color: #fff;
     padding: 20px;
-    position: fixed;
     bottom: 0;
     width: 100%;
     display: flex;
@@ -34,7 +33,7 @@
 
 <footer class="footer">
   <div>
-    <p class="footer-text">Wine and Chill&copy; 2023. Todos los derechos reservados.</p>
+    <p class="footer-text">Wine and Chill&copy; 2023.</p>
     <p class="footer-text">Contacto: manueltamendi97@gmail.com</p>
   </div>
   <div>
