--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -19,6 +19,7 @@
   .navbar-nav li:last-child {
     margin-right: 0;
   }
+  
 
   .navbar-brand,
   .navbar-nav .nav-link {
@@ -29,6 +30,24 @@
   .navbar-brand:hover,
   .navbar-nav .nav-link:hover {
     color: #fbb6e3;
+  }
+
+  .cart-badge {
+    width: 18px;
+    height: 18px;
+    background-color: #8a56ac;
+    color: white;
+    border-radius: 50%;
+    padding: 0px 5px;
+    font-size: 12px;
+    position: absolute;
+    top: 22px;
+    right: 22px;
+  }
+
+  .cart-badge:hover {
+    background-color: #fbb6e3;
+    color: #8a56ac;
   }
 </style>
 
@@ -51,10 +70,13 @@
         </li>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link .active" aria-current="page" href="#">Cart</a>
-        </li>
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link .active" aria-current="page" href="#">
+              <i class="fas fa-shopping-cart"></i>
+              <span class="cart-badge">5</span>
+            </a>
+          </li>
+        </ul>
     </div>
   </div>
 </nav>
