--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -19,7 +19,6 @@
   .navbar-nav li:last-child {
     margin-right: 0;
   }
-  
 
   .navbar-brand,
   .navbar-nav .nav-link {
@@ -60,23 +59,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a class="nav-link .active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link .active" aria-current="page" href="#">Products</a>
+          <a class="nav-link active" aria-current="page" href="/products?page=1">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link .active" aria-current="page" href="#">Chat</a>
+          <a class="nav-link active" aria-current="page" href="/chat">Chat</a>
         </li>
       </ul>
       <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link .active" aria-current="page" href="#">
-              <i class="fas fa-shopping-cart"></i>
-              <span class="cart-badge">5</span>
-            </a>
-          </li>
-        </ul>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/cart">
+            <i class="fas fa-shopping-cart"></i>
+            <span class="cart-badge">5</span>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
