create new product terminado con swal alert y formulario

--- a/src/views/chat/chat.handlebars
+++ b/src/views/chat/chat.handlebars
@@ -1,4 +1,4 @@
-  <div class="chatBox-container">
+  <div class="container">
     <h1>Chat Box</h1>
     <div class="chat-container">
       <div id="messages"></div>
