--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -39,21 +39,32 @@
     word-break: break-all;
   }
 
-
+  .chatLine {
+    position: relative;
+    width: 100%;
+  }
   
   #userNameTag {
-    padding: 2px 6px;
+    padding: 1px 3px;
     border: none;
     border-radius: 22px;
+  }
+
+  .messageTime {
+    position: absolute;
+    right: 0;
+    bottom: -17px;
+    font-size: 12px;
+    color: #888;
+    width: 50px;
   }
   
   #chatInput {
     width: 100%;
     padding: 10px;
     border: none;
-    border-top: 1px solid #ccc;
     background-color: #fff;
-    border-radius: 0;
+    border-radius: 2px;
     margin-top: 20px;
     position: sticky;
     bottom: 0;
