productDetail.js error fixed! and updated _id in productList.handlebars

--- a/src/views/products/productList.handlebars
+++ b/src/views/products/productList.handlebars
@@ -5,7 +5,7 @@
     {{#each products}}
     <div class="col-md-6 col-lg-3 mb-4">
       <div class="card">
-        <a href="/products/{{id}}">
+        <a href="/products/{{_id}}">
           <img src="{{thumbnail}}" class="card-img-top product-image" alt="{{title}}">
           <div class="card-body">
             <h5 class="card-title">{{title}}</h5>
