--- a/src/views/products/newProduct.handlebars
+++ b/src/views/products/newProduct.handlebars
@@ -21,8 +21,8 @@
         <input type="number" id="stock" name="stock">
       </div>
       <div class="form-group">
-        <label for="category">Categoría:</label>
-        <input type="text" id="category" name="category" required>
+        <label for="category">Tipo:</label>
+        <input type="text" id="type" name="type" required>
       </div>
       <div class="form-group">
         <input type="submit" value="Crear Producto">
