--- a/public/css/productList.css
+++ b/public/css/productList.css
@@ -10,6 +10,40 @@ h1 {
   margin-bottom: 30px;
 }
 
+.search-container {
+  margin-top: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#search-input {
+  padding: 10px;
+  width: 300px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#search-input::placeholder {
+  color: #888;
+}
+
+#search-button {
+  padding: 10px 20px;
+  background-color: #8a56ac;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#search-button:hover {
+  background-color: #6f3c8e;
+}
+
+
 .row {
   justify-content: center;
 }
