--- a/src/views/products/productList.handlebars
+++ b/src/views/products/productList.handlebars
@@ -1,6 +1,14 @@
 <div class="container">
   <h1>Productos Destacados</h1>
 
+  <!-- Agregar el input de búsqueda -->
+  <div class="search-container">
+    <form action="/products" method="GET">
+      <input type="text" name="title" id="search-input" placeholder="Buscar por título">
+      <button type="submit" id="search-button">Buscar</button>
+    </form>
+  </div>
+
   <div class="row justify-content-center">
     {{#each products}}
     <div class="col-md-6 col-lg-3 mb-4">
