--- a/src/views/auth/login.handlebars
+++ b/src/views/auth/login.handlebars
@@ -1,25 +1,37 @@
-<div class="container">
-  <h3>Iniciar Sesión</h3>
-  <form id="loginForm" action="/api/login" method="POST" class="user-form">
-    <div class="form-group">
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" name="email" required>
-    </div>
-    <div class="form-group">
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <div class="form-group">
-      <input id="login" type="submit" value="Iniciar Sesión">
-    </div>
-    <div class="form-group">
-      <div class="forgot-password">
-        <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Formulario de Inicio de Sesión</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h3>Iniciar Sesión</h3>
+    <form id="loginForm" action="/api/login" method="POST" class="user-form">
+      <div class="form-group">
+        <label for="email">Correo electrónico:</label>
+        <input type="email" id="email" name="email" placeholder="Correo electrónico" required>
       </div>
-      <div class="accept-session-container">
-        <label for="keepSession">Mantener sesión iniciada</label>
-        <input type="checkbox" id="keepSession" name="keepSession">
+      <div class="form-group">
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" placeholder="Contraseña" required>
       </div>
-    </div>
-  </form>
-</div>
+      <div class="form-group">
+        <input class="form-button login" id="login" type="submit" value="Iniciar Sesión">
+      </div>
+      <div class="form-group">
+        <a class="form-button register" href="/auth/register" id="register">Crear Usuario</a>
+      </div>
+      <div class="form-group">
+        <div class="accept-session-container">
+          <label for="keepSession">Mantener sesión iniciada</label>
+          <input type="checkbox" id="keepSession" name="keepSession">
+        </div>
+        <div class="forgot-password">
+          <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+        </div>
+      </div>
+    </form>
+  </div>
+</body>
+</html>
