--- a/src/views/auth/register.handlebars
+++ b/src/views/auth/register.handlebars
@@ -3,7 +3,7 @@
   <form id="userForm" action="/api/users" method="POST" class="user-form">
     <div class="form-group">
       <label for="name">Nombre:</label>
-      <input type="text" id="name" name="name" required>
+      <input type="text" id="name" name="name" placeholder="Nombre" required>
     </div>
     <div class="form-group">
       <label for="photo">Foto:</label>
@@ -11,22 +11,21 @@
     </div>
     <div class="form-group">
       <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" placeholder="Correo electrónico" required>
     </div>
     <div class="form-group">
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" placeholder="Contraseña"required>
     </div>
     <div class="form-group">
       <label for="confirmPassword">Confirmar Contraseña:</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" required>
-    </div>
-    <div class="form-group accept-cookies-container">
-        <label for="acceptCookies">Aceptar cookies</label>
-        <input type="checkbox" id="acceptCookies" name="acceptCookies">
+      <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirmar Contraseña" required>
     </div>
     <div class="form-group">
-      <input id="register" type="submit" value="Crear Usuario">
+      <input class="form-button register" id="register" type="submit" value="Crear Usuario">
+    </div>
+    <div class="form-group">
+      <a class="form-button login" href="/auth/login" id="login" class="submit-button">Iniciar Sesión</a>
     </div>
   </form>
 </div>
