--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -1,4 +1,6 @@
 <style>
+  /* Estilos existentes */
+
   .navbar {
     height: 100px;
   }
@@ -69,6 +71,9 @@
         </li>
       </ul>
       <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/auth/register">Registrarse</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/cart">
             <i class="fas fa-shopping-cart"></i>
