--- a/public/css/productList.css
+++ b/public/css/productList.css
@@ -1,4 +1,3 @@
-
 .container {
   text-align: center;
   margin-top: 50px;
@@ -22,6 +21,7 @@ h1 {
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: width 0.3s ease;
 }
 
 #search-input::placeholder {
@@ -43,19 +43,29 @@ h1 {
   background-color: #6f3c8e;
 }
 
-
 .row {
   justify-content: center;
 }
 
+.card-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 -10px;
+}
+
 .card {
-  width: 100%;
-  max-width: 300px;
+  flex: 0 0 200px;
+  height: 340px;
+  width: 200px;
   border: 1px solid #ddd;
   border-radius: 5px;
   padding: 10px;
-  margin-bottom: 20px;
+  margin: 0 10px 20px;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card:hover {
@@ -67,8 +77,6 @@ h1 {
   object-fit: contain;
   height: 200px;
   width: 100%;
-  max-width: 100%;
-  max-height: 100%;
 }
 
 .card-title {
@@ -118,19 +126,10 @@ h1 {
 
 /* Responsividad */
 
-@media (max-width: 765px) {
-  .row {
-    flex-wrap: wrap;
-  }
-
-  .col-md-6 {
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-
-  .card {
-    margin-right: auto;
-    margin-left: auto;
+@media (max-width: 576px) {
+  #search-input {
+    width: 100%;
+    max-width: 200px;
+    margin-bottom: 10px;
   }
 }
-  
