authRoutes complete login and register now works! also auth middlewares added

--- a/src/views/auth/register.handlebars
+++ b/src/views/auth/register.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
   <h3>Crear Usuario</h3>
-  <form id="userForm" action="/api/users" method="POST" class="user-form">
+  <form id="userForm" action="/api/auth/register" method="POST" class="user-form">
     <div class="form-group">
       <label for="name">Nombre:</label>
       <input type="text" id="name" name="name" placeholder="Nombre" required>
