--- a/src/views/auth/register.handlebars
+++ b/src/views/auth/register.handlebars
@@ -10,6 +10,10 @@
       <input type="file" id="photo" name="photo" accept="image/*">
     </div>
     <div class="form-group">
+      <label for="name">Edad:</label>
+      <input type="text" id="age" name="age" placeholder="Edad" required>
+    </div>
+    <div class="form-group">
       <label for="email">Correo electrónico:</label>
       <input type="email" id="email" name="email" placeholder="Correo electrónico" required>
     </div>
