--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,8 +10,14 @@
     <link rel="stylesheet" href="/public/css/footer.css">
 
     <style>
-        body {
+        *{
+            box-sizing: border-box;
             margin: 0;
+            padding: 0;
+        }
+        body {
+            
+            
             min-height: 100vh;
             display: flex;
             flex-direction: column;
