--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -65,16 +65,16 @@
   }
   
   .cart-badge {
-    width: 8px;
+    width: 18px;
     height: 18px;
-    background-color: #fbb6e3;
+    background-color: #fbb6e3e0;
     color: #fff;
     border-radius: 50%;
     padding: 0px 5px;
     font-size: 14px;
     position: absolute;
     top: -10px;
-    right: -20px;
+    right: -14px;
     display: flex;
     align-items: center;
     justify-content: center;
