Login and Register changes -redirect and alerts added

--- a/src/views/auth/login.handlebars
+++ b/src/views/auth/login.handlebars
@@ -20,7 +20,7 @@
         <input class="form-button login" id="login" type="submit" value="Iniciar Sesión">
       </div>
       <div class="form-group">
-        <a class="form-button register" href="/auth/register" id="register">Crear Usuario</a>
+        <a class="form-button register" href="/register" id="register">Crear Usuario</a>
       </div>
       <div class="form-group">
         <div class="accept-session-container">
