--- a/src/views/auth/register.handlebars
+++ b/src/views/auth/register.handlebars
@@ -29,7 +29,7 @@
       <input class="form-button register" id="register" type="submit" value="Crear Usuario">
     </div>
     <div class="form-group">
-      <a class="form-button login" href="/auth/login" id="login" class="submit-button">Iniciar Sesión</a>
+      <a class="form-button login" href="/login" id="login" class="submit-button">Iniciar Sesión</a>
     </div>
   </form>
 </div>
