Authentication minor changes

--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -17,7 +17,7 @@
       </ul>
     </div>
     <div class="navbar-right">
-      <a class="nav-link" href="/auth/register">Registrarse</a>
+      <a class="nav-link" href="/register">Registrarse</a>
       <a class="nav-link cart-link" href="/cart">
         <i class="fas fa-shopping-cart"></i>
         <span class="cart-badge" id="cartBadge"></span>
