--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,4 +1,3 @@
-/* Estilos para el formulario de registro */
 .container {
   max-width: 500px;
   width: 100%;
@@ -97,6 +96,35 @@
   background-color: #0056b3;
 }
 
+.form-group .form-button.github {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+}
+
+.form-group .form-button.github i {
+  margin-right: 8px;
+}
+
+.form-group .form-button.github:hover {
+  background-color: #000;
+}
+
+.separator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.separator .separator-text {
+  font-size: 14px;
+  color: #555555;
+}
+
 .success-message {
   color: #7cb342;
 }
@@ -114,5 +142,3 @@
     width: auto;
   }
 }
-
-
