--- a/src/views/partials/footer.handlebars
+++ b/src/views/partials/footer.handlebars
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div>
     <p class="footer-text">Wine and Chill&copy; 2023.</p>
-    <p class="footer-text">Contacto: manueltamendi97@gmail.com</p>
+    <p class="footer-text">Contacto: manuelotamendi97@gmail.com</p>
   </div>
   <div>
     <a href="https://github.com/manuel-25" class="footer-link">
