Sessiondata middleware and conditional navbar

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -17,7 +17,11 @@
       </ul>
     </div>
     <div class="navbar-right">
-      <a class="nav-link" href="/register">Registrarse</a>
+      <% if (locals.user) { %>
+        <a class="nav-link" href="/api/auth/signout">Signout</a>
+      <% } else { %>
+      <a class="nav-link" href="/login">Iniciar Sesion</a>
+      <% } %>
       <a class="nav-link cart-link" href="/cart">
         <i class="fas fa-shopping-cart"></i>
         <span class="cart-badge" id="cartBadge"></span>
