--- a/public/css/productList.css
+++ b/public/css/productList.css
@@ -1,3 +1,10 @@
+/* Estilos generales */
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
 .container {
   text-align: center;
   margin-top: 50px;
@@ -9,6 +16,8 @@ h1 {
   margin-bottom: 30px;
 }
 
+/* Barra de búsqueda */
+
 .search-container {
   margin-top: 20px;
   text-align: center;
@@ -18,6 +27,7 @@ h1 {
 #search-input {
   padding: 10px;
   width: 300px;
+  max-width: 100%;
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -42,6 +52,8 @@ h1 {
 #search-button:hover {
   background-color: #6f3c8e;
 }
+
+/* Lista de productos */
 
 .row {
   justify-content: center;
@@ -83,6 +95,7 @@ h1 {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
+  color: #333
 }
 
 .card-text {
@@ -101,12 +114,14 @@ h1 {
   color: inherit;
 }
 
+/* Paginación */
+
 .pagination {
   text-align: center;
   margin-top: 20px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: bottom;
   margin-bottom: 20px;
 }
 
