--- a/public/css/resetPassword.css
+++ b/public/css/resetPassword.css
@@ -35,7 +35,7 @@ body {
     font-size: 14px;
   }
   
-  .form-group input[type="email"] {
+  .form-group input[type="password"] {
     width: 100%;
     padding: 12px;
     border-radius: 5px;
@@ -81,7 +81,7 @@ body {
       padding: 20px;
     }
   
-    .form-group input[type="email"] {
+    .form-group input[type="password"] {
       padding: 10px;
     }
   
