--- a/src/views/auth/forgotPassword.ejs
+++ b/src/views/auth/forgotPassword.ejs
@@ -6,10 +6,10 @@
     <form id="forgotPasswordForm" action="/api/auth/forgot-password" method="POST" class="user-form">
       <div class="form-group">
         <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email" placeholder="Correo electrónico">
+        <input type="email" id="email" name="email" placeholder="Correo electrónico" value="manuelotamendi97@gmail.com">
       </div>
       <div class="form-group">
-        <input class="form-button" id="submit" type="submit" value="Enviar Instrucciones">
+        <input class="form-button" id="submit" type="submit" value="Recuperar contraseña">
       </div>
     </form>
     <div class="back-to-login">
