--- a/src/views/auth/resetPassword.ejs
+++ b/src/views/auth/resetPassword.ejs
@@ -4,6 +4,7 @@
   <div class="container">
     <h3>Reestablecer Contraseña</h3>
     <form id="resetPasswordForm" action="/api/auth/reset-password" method="POST" class="user-form">
+      <div id="user-email" data-email="<%= email %>"></div>
       <div class="form-group">
         <label for="password">Nueva Contraseña:</label>
         <input type="password" id="password" name="password" placeholder="Nueva Contraseña">
