--- a/src/views/auth/forgotPassword.ejs
+++ b/src/views/auth/forgotPassword.ejs
@@ -6,7 +6,7 @@
     <form id="forgotPasswordForm" action="/api/auth/forgot-password" method="POST" class="user-form">
       <div class="form-group">
         <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email" placeholder="Correo electrónico" value="manuelotamendi97@gmail.com">
+        <input type="email" id="email" name="email" placeholder="Correo electrónico">
       </div>
       <div class="form-group">
         <input class="form-button" id="submit" type="submit" value="Recuperar contraseña">
